실시간 인기글, 이달의 MVP, 검색 모달 추가

--- a/board.html
+++ b/board.html
@@ -28,105 +28,106 @@
                     <h1>자유게시판</h1>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
             <div class="contents-board-right">
-                <div class="contents-dummy">
-                    게시판 더미 보드 입니다.
+                <div class="contents-board-right-search">
+                    <input placeholder="검색어를 입력하세요.">
+                    <button class="right-serach-btn">검색</button>
                 </div>
                 <div class="contents-dummy">
                     게시판 더미 보드 입니다.
