--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 
-<body onload="showClock()">
+<body>
     <div class="nav-wrap">
         <nav>
             <img src="./img/main-logo.png">
@@ -44,7 +44,7 @@
                 </div>
                 <div class="contents-center-wrap">
                     <div>
-                        <dt><a>게시판 제목</a></dt>
+                        <dt><a href="./board.html">게시판 제목</a></dt>
                         <dd><a>글 제목</a>
                             <a id="divClock" class="clock"></a>
                         </dd>
@@ -86,10 +86,69 @@
             <div class="contents-board-right">
                 <div class="contents-board-right-search">
                     <input placeholder="검색어를 입력하세요.">
-                    <button class="right-serach-btn">검색</button>
+                    <button id="modal_open_btn" type="button" class="right-serach-btn">검색</button>
                 </div>
-                <div class="contents-dummy">
-                    게시판 더미 보드 입니다.
+                <div class="contents-right-wrap">
+                    <div>
+                        <dt><a>실시간 인기 글</a></dt>
+                        <dd><a>글 제목</a>
+                            <a>내용</a>
+                            <ul>
+                                <li>00게시판</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd><a>글 제목</a>
+                            <a>내용</a>
+                            <ul>
+                                <li>00게시판</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                    </div>
+                </div>
+                <div class="contents-right-wrap">
+                    <div>
+                        <dt><a>이달의 MVP</a></dt>
+                        <dd>
+                            <ul>
+                                <li>1위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd>
+                            <ul>
+                                <li>2위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd>
+                            <ul>
+                                <li>3위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd>
+                            <ul>
+                                <li>4위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd>
+                            <ul>
+                                <li>5위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+
+                    </div>
                 </div>
                 <div class="contents-dummy">
                     게시판 더미 보드 입니다.
@@ -100,18 +159,48 @@
             </div>
         </div>
     </div>
+    <div id="modal">
+
+        <div class="modal_content">
+            <div class="modal-content-board">
+                <h2>검색 결과</h2>
+                <div class="contents-right-wrap width-85">
+                    <div>
+                        <dd><a>글 제목</a>
+                            <a>내용</a>
+                            <ul>
+                                <li>00게시판</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd><a>글 제목</a>
+                            <a>내용</a>
+                            <ul>
+                                <li>00게시판</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                    </div>
+                </div>
+
+                <button type="button" id="modal_close_btn">창 닫기</button>
+            </div>
+        </div>
+
+        <div class="modal_layer"></div>
+    </div>
     <script language="javascript">
-        function showClock() {
-            var currentDate = new Date();
-            var divClock = document.getElementById("divClock");
 
-            var msg = currentDate.getHours() + "시"
-            msg += currentDate.getMinutes() + "분";
-            msg += currentDate.getSeconds() + "초";
-
-            divClock.innerText = msg;
-            setTimeout(showClock, 1000);
+        document.getElementById("modal_open_btn").onclick = function () {
+            document.getElementById("modal").style.display = "block";
         }
+
+        document.getElementById("modal_close_btn").onclick = function () {
+            document.getElementById("modal").style.display = "none";
+        }
+
     </script>
 </body>
 
