--- a/board.html
+++ b/board.html
@@ -14,7 +14,7 @@
 <body>
     <div class="nav-wrap">
         <nav>
-            <img src="./img/main-logo.png">
+            <a href="./index.html"><img src="./img/main-logo.png"></a>
             <div>
                 <button class="nav-btn-login">로그인</button>
                 <button class="nav-btn-sign">회원가입</button>
@@ -23,111 +23,135 @@
     </div>
     <div class="contents-board-wrap">
         <div class="contents-board">
+            <div class="contents-board-left">
+                <div class="accout-form">
+                    <p>커뮤니티 이용을 위해 <span>로그인</span>이 필요합니다!</p>
+                    <button class="form-btn-login">로그인</button>
+                    <button class="form-btn-sign">회원가입</button>
+                </div>
+                <nav class="board-nav">
+                    <ul>
+                        <li><a href="">개발자 talk + Q&A</a></li>
+                        <li><a href="">교수님 게시판</a></li>
+                        <li><a href="">익명/자유 게시판</a></li>
+                        <li><a href="">Tech News</a></li>
+                        <li><a href="">공지사항</a></li>
+                    </ul>
+                </nav>
+                <div class="contents-left-banner1">
+
+                </div>
+                <div class="contents-left-banner2">
+
+                </div>
+                <div class="contents-dummy">
+                    게시판 더미 보드 입니다.
+                </div>
+            </div>
             <div class="contents-board-center">
                 <div class="board-name">
-                    <h1>자유게시판</h1>
+                    <h1>개발자 talk talk</h1>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10">
+                    <div class="mx-10" >
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
+                    <div>
                         <div>
-                            <div>
-                                <time>22분 전</time>
-                                <span>익명</span>
-                            </div>
-                            <div>
-                                <span>💚 1</span>
-                                <span>댓글 1</span>
-                            </div>
+                            <time>22분 전</time>
+                            <span>익명</span>
+                        </div>
+                        <div>
+                            <span>💚 1</span>
+                            <span>댓글 1</span>
                         </div>
                     </div>
                 </div>
+                </div>
                 <div class="board-detail-list">
-                    <div class="mx-10">
+                    <div class="mx-10" >
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
+                    <div>
                         <div>
-                            <div>
-                                <time>22분 전</time>
-                                <span>익명</span>
-                            </div>
-                            <div>
-                                <span>💚 1</span>
-                                <span>댓글 1</span>
-                            </div>
+                            <time>22분 전</time>
+                            <span>익명</span>
+                        </div>
+                        <div>
+                            <span>💚 1</span>
+                            <span>댓글 1</span>
                         </div>
                     </div>
                 </div>
+                </div>
                 <div class="board-detail-list">
-                    <div class="mx-10">
+                    <div class="mx-10" >
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
+                    <div>
                         <div>
-                            <div>
-                                <time>22분 전</time>
-                                <span>익명</span>
-                            </div>
-                            <div>
-                                <span>💚 1</span>
-                                <span>댓글 1</span>
-                            </div>
+                            <time>22분 전</time>
+                            <span>익명</span>
+                        </div>
+                        <div>
+                            <span>💚 1</span>
+                            <span>댓글 1</span>
                         </div>
                     </div>
                 </div>
+                </div>
                 <div class="board-detail-list">
-                    <div class="mx-10">
+                    <div class="mx-10" >
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
+                    <div>
                         <div>
-                            <div>
-                                <time>22분 전</time>
-                                <span>익명</span>
-                            </div>
-                            <div>
-                                <span>💚 1</span>
-                                <span>댓글 1</span>
-                            </div>
+                            <time>22분 전</time>
+                            <span>익명</span>
+                        </div>
+                        <div>
+                            <span>💚 1</span>
+                            <span>댓글 1</span>
                         </div>
                     </div>
                 </div>
+                </div>
                 <div class="board-detail-list">
-                    <div class="mx-10">
+                    <div class="mx-10" >
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
+                    <div>
                         <div>
-                            <div>
-                                <time>22분 전</time>
-                                <span>익명</span>
-                            </div>
-                            <div>
-                                <span>💚 1</span>
-                                <span>댓글 1</span>
-                            </div>
+                            <time>22분 전</time>
+                            <span>익명</span>
+                        </div>
+                        <div>
+                            <span>💚 1</span>
+                            <span>댓글 1</span>
                         </div>
                     </div>
                 </div>
+                </div>
                 <div class="board-detail-list">
-                    <div class="mx-10">
+                    <div class="mx-10" >
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
+                    <div>
                         <div>
-                            <div>
-                                <time>22분 전</time>
-                                <span>익명</span>
-                            </div>
-                            <div>
-                                <span>💚 1</span>
-                                <span>댓글 1</span>
-                            </div>
+                            <time>22분 전</time>
+                            <span>익명</span>
+                        </div>
+                        <div>
+                            <span>💚 1</span>
+                            <span>댓글 1</span>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
             <div class="contents-board-right">
-                <div class="contents-board-right-search">
-                    <input placeholder="검색어를 입력하세요.">
-                    <button class="right-serach-btn">검색</button>
+                <div class="contents-dummy">
+                    게시판 더미 보드 입니다.
                 </div>
                 <div class="contents-dummy">
                     게시판 더미 보드 입니다.
