게시판 상세 오른쪽 배너 추가

--- a/board.html
+++ b/board.html
@@ -9,6 +9,7 @@
     <meta name="description" content="삼육대학교 학생들을 위한 개발자 커뮤니티 입니다" />
     <meta name="keywords" content="삼육대학교, 삼육대 컴공, 삼육대학교 컴퓨터공학과, 삼육대 개발자커뮤니티, 삼육대 지능정보," />
     <link rel="stylesheet" type="text/css" href="./board.css">
+    <link rel="stylesheet" type="text/css" href="./index.css">
 </head>
 
 <body>
@@ -53,108 +54,168 @@
                     <h1>개발자 talk talk</h1>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
                 <div class="board-detail-list">
-                    <div class="mx-10" >
+                    <div class="mx-10">
                         <h2>게시글 제목</h2>
                         <p>글 내용</p>
-                    <div>
                         <div>
-                            <time>22분 전</time>
-                            <span>익명</span>
-                        </div>
-                        <div>
-                            <span>💚 1</span>
-                            <span>댓글 1</span>
+                            <div>
+                                <time>22분 전</time>
+                                <span>익명</span>
+                            </div>
+                            <div>
+                                <span>💚 1</span>
+                                <span>댓글 1</span>
+                            </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
             <div class="contents-board-right">
-                <div class="contents-dummy">
-                    게시판 더미 보드 입니다.
+                <div class="contents-board-right-search">
+                    <input placeholder="검색어를 입력하세요.">
+                    <button id="modal_open_btn" type="button" class="right-serach-btn">검색</button>
                 </div>
-                <div class="contents-dummy">
-                    게시판 더미 보드 입니다.
+                <div class="contents-right-wrap">
+                    <div>
+                        <dt><a>실시간 인기 글</a></dt>
+                        <dd><a>글 제목</a>
+                            <a>내용</a>
+                            <ul>
+                                <li>00게시판</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd><a>글 제목</a>
+                            <a>내용</a>
+                            <ul>
+                                <li>00게시판</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                    </div>
+                </div>
+                <div class="contents-right-wrap">
+                    <div>
+                        <dt><a>이달의 MVP</a></dt>
+                        <dd>
+                            <ul>
+                                <li>1위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd>
+                            <ul>
+                                <li>2위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd>
+                            <ul>
+                                <li>3위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd>
+                            <ul>
+                                <li>4위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd>
+                            <ul>
+                                <li>5위</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+
+                    </div>
                 </div>
                 <div class="contents-dummy">
                     게시판 더미 보드 입니다.
@@ -165,6 +226,49 @@
             </div>
         </div>
     </div>
+    <div id="modal">
+
+        <div class="modal_content">
+            <div class="modal-content-board">
+                <h2>검색 결과</h2>
+                <div class="contents-right-wrap width-85">
+                    <div>
+                        <dd><a>글 제목</a>
+                            <a>내용</a>
+                            <ul>
+                                <li>00게시판</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                        <dd><a>글 제목</a>
+                            <a>내용</a>
+                            <ul>
+                                <li>00게시판</li>
+                                <li>💚 1</li>
+                                <li>댓글 1</li>
+                            </ul>
+                        </dd>
+                    </div>
+                </div>
+
+                <button type="button" id="modal_close_btn">창 닫기</button>
+            </div>
+        </div>
+
+        <div class="modal_layer"></div>
+    </div>
+    <script language="javascript">
+
+        document.getElementById("modal_open_btn").onclick = function () {
+            document.getElementById("modal").style.display = "block";
+        }
+
+        document.getElementById("modal_close_btn").onclick = function () {
+            document.getElementById("modal").style.display = "none";
+        }
+
+    </script>
 </body>
 
 </html>
