--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="nav-wrap">
         <nav>
-            <img src="./img/main-logo.png">
+            <a href="./index.html"><img src="./img/main-logo.png"></a>
             <div>
                 <button class="nav-btn-login">로그인</button>
                 <button class="nav-btn-sign">회원가입</button>
